--- a/app/assets/stylesheets/pages/_devise.scss
+++ b/app/assets/stylesheets/pages/_devise.scss
@@ -67,7 +67,7 @@ a:hover {
   height:240px;
   object-fit: cover;
   margin-left: 25%;
-  padding-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .form-style-10{
