--- a/app/views/rdvs/index.html.erb
+++ b/app/views/rdvs/index.html.erb
@@ -1,33 +1,38 @@
 <div class="main">
   <p class= "dates-title">My matches & dates</p>
   <div class="tab-container">
+    <div class="overlay" class="cover blur-off">
       <div class="tab-bar">
         <a href="#Requests" class="tab is-active" data-tab="tab-1">Matches</a>
         <a href="#Matches" class="tab" data-tab="tab-2">Dates</a>
       </div>
     </div>
-    <div class="tab-content is-active" id="tab-1">
-      <!-- <div class="col-xs-12 col-sm-10 col-sm-offset-1"> -->
-      <ul class="inbox">
-        <% if @rdvs_requests.nil? %>
-          <h4>You have no date requests at the moment</h4>
-        <% end %>
-      <% @rdvs_requests.each do |rdv_request| %>
-        <li class="message">
-          <%= profile_picture_for(User.find(rdv_request.asker), height: 80, width: 80, class: "avatar") %>
-          <div class="message-name">
-            <%= User.find(rdv_request.asker).first_name %>
-            <br/><%= link_to "View match", "/matches/#{rdv_request.match_id}" %>
-          </div>
-          <div class="message-stats">
-            <%= rdv_request.match.score.round %> %
-          </div>
-          <div class="message-bar">
-            <%= Bar.find(rdv_request.bar_id).name %>
-            <br/><div class="linktbar"><p>View bar</p></div>
-          </div>
-            <%= link_to "Accept", accept_rdv_path(rdv_request), class: "btn btn-primary btn-accept" %>
-        </li>
+
+      <div class="tab-content is-active" id="tab-1">
+        <div class="overlay" class="cover blur-off">
+        <!-- <div class="col-xs-12 col-sm-10 col-sm-offset-1"> -->
+        <ul class="inbox">
+          <% if @rdvs_requests.nil? %>
+            <h4>You have no date requests at the moment</h4>
+          <% end %>
+        <% @rdvs_requests.each do |rdv_request| %>
+          <li class="message">
+            <%= profile_picture_for(User.find(rdv_request.asker), height: 80, width: 80, class: "avatar") %>
+            <div class="message-name">
+              <%= User.find(rdv_request.asker).first_name %>
+              <br/><%= link_to "View match", "/matches/#{rdv_request.match_id}" %>
+            </div>
+            <div class="message-stats">
+              <%= rdv_request.match.score.round %> %
+            </div>
+            <div class="message-bar">
+              <%= Bar.find(rdv_request.bar_id).name %>
+              <br/><div class="linktbar"><p>View bar</p></div>
+            </div>
+              <%= link_to "Accept", accept_rdv_path(rdv_request), class: "btn btn-primary btn-accept" %>
+          </li>
+        </div>
+
 
       <div class="pop-up">
         <span>x</span>
@@ -42,6 +47,7 @@
     </div>
 
     <div class="tab-content" id="tab-2">
+      <div class="overlay" class="cover blur-off">
        <!--  <div class="col-xs-12 col-sm-10 col-sm-offset-1"> -->
       <ul class="inbox">
         <% if @rdvs_done.nil? %>
@@ -85,7 +91,7 @@
             <%= link_to "Send message", conversation_messages_path(rdv_done.conversation), class: "btn btn-primary btn-accept" %>
 
         </li>
-
+      </div>
       <div class="pop-up">
         <span>x</span>
         <div class="pop-up-text">
