--- a/app/views/shared/_show_bar.html.erb
+++ b/app/views/shared/_show_bar.html.erb
@@ -1,6 +1,6 @@
 
   <div class="display-bar">
-    <div style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.7) 50%), url('<%= cl_image_path @bar.photo %>'); background-size: cover;">
+    <div style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.7) 50%), url('<%= cl_image_path @bar.photo %>'); background-size: cover; padding: 30px;">
       <h2><%= @bar.name %></h2>
       <h3><%= @bar.address %></h3>
     </div>
@@ -8,8 +8,18 @@
       <p>
         <%= @bar.description %>
       </p>
-      <%= render partial: 'bars/show', locals: {bar: @bar, map_id: 1} %>
+      <div id="map" style="width: 420px; height: 300px;"></div>
+      </div>
     </div>
   </div>
 
+<% markers = @bar.build_markers %>
 
+<% content_for(:after_js) do %>
+  <%= javascript_tag do %>
+    // drawMap(selectorDom, markerJson)
+    $(function() {
+      drawMap("map", <%= raw markers.to_json %>);
+    });
+  <% end %>
+<% end %>
